# acorn-mono

./: .gitignore  .ruff.toml  CONFIG_EXAMPLE.md  README.md  acorn-mono-config.md  pyproject.toml  pyrightconfig.json  start-agent.sh  stop-agent.sh  test_evolution_agent.py  test_llm_agent_evolution.py
.acorn/: registry.json
acorn-agent/: README.md  pyproject.toml
acorn-agent/src/acorn_agent/: __init__.py  cli.py  client.py  formatter.py  server.py
acorn-agent/src/acorn_agent/plugins/: __init__.py  vi_plugin.py
acorn-agent/tests/: test_cli.py
acorn-cli/: README.md  pyproject.toml
acorn-cli/src/acorn_cli/: __init__.py  cli.py  client.py  evolution.py  registry.py  server.py  tui.py
acorn-cli/tests/: test_cli.py  test_evolution_calculator_memory.py  test_registry.py  test_tui.py
acorn-core/: pyproject.toml  pyrightconfig.json
acorn-core/src/acorn_core/: __init__.py  config.py  kernel.py  models.py  specs.py  types.py
acorn-core/src/acorn_core/events/: __init__.py
acorn-core/src/acorn_core/plugins/: __init__.py  evo_manager.py  sandbox.py
acorn-core/tests/: test_calculator_evolution.py  test_config.py  test_event_bus.py  test_kernel.py  test_new_api.py  test_sandbox.py
acorn-events/: pyproject.toml
acorn-events/src/acorn_events/: __init__.py  context.py
calculators/: calc_asset_turnover.py  calc_book_value_per_share.py  calc_currentdebt_to_debt.py  calc_debt_to_equity.py  calc_fcf_stability.py  calc_graham_value.py  calc_gross_profit.py  calc_non_current_assets.py  calc_non_current_liabilities.py  calc_npcf_ratio.py  calc_operating_profit_margin.py  calc_pb_ratio.py  calc_receivable_turnover.py  calc_roic.py
docs/: 01_企业排雷书册.md  02_排雷系统开发文档.md  03_排雷系统开发文档.md  EVOLUTION_ARCHITECTURE.md  EVOLUTION_DESIGN.md  anytool_integration_guide.md  blinker-event-bus-design.md  field-extension-design.md  self_evolution_fix_plan.md  self_evolution_status.md  value-investment-plugin-design.md  value-investment-plugin-progress.md  (+1 more)
examples-plugin/: README.md  pyproject.toml  pyrightconfig.json
examples-plugin/src/examples_plugin/: __init__.py  cli.py  echo.py
financial-downloader/: main.py  pyproject.toml
financial-downloader/docs/plans/: PROGRESS.md
financial-downloader/skills/financial-downloader/: SKILL.md
financial-downloader/src/financial_downloader/: cli.py
financial-downloader/src/financial_downloader/downloaders/: __init__.py  base.py  cninfo.py  cninfo_impl.py  hkex.py  sec.py
financial-downloader/tests/: test_base.py  test_cli.py  test_cninfo.py  test_hkex.py  test_sec.py
html2md/: pyproject.toml
html2md/skills/html2md/: SKILL.md
html2md/src/html2md/: __init__.py  __main__.py  cli.py  converter.py
html2md/tests/: __init__.py  test_converter.py
pdf2txt/: .gitignore  README.md  pyproject.toml
pdf2txt/scripts/: analyze_content.py
pdf2txt/skills/pdf2txt/: SKILL.md
pdf2txt/src/pdf2txt/: __init__.py  cli.py  extractor.py
pdf2txt/tests/: test_cli.py  test_extractor.py  test_integration.py  test_skip_existing.py
pdf2txt/tests/fixtures/: README.md
value-investment-plugin/provider_market_hk/: README.md  pyproject.toml
value-investment-plugin/provider_market_hk/src/provider_market_hk/: plugin.py  provider.py
value-investment-plugin/provider_market_us/: README.md  pyproject.toml
value-investment-plugin/provider_market_us/src/provider_market_us/: __init__.py  plugin.py  provider.py
value-investment-plugin/provider_tushare/: pyproject.toml
value-investment-plugin/provider_tushare/src/provider_tushare/: __init__.py  plugin.py  provider.py
value-investment-plugin/vi_calculators/: README.md  __init__.py  pyproject.toml
value-investment-plugin/vi_calculators/tests/: conftest.py  test_calculator_name_collision.py
value-investment-plugin/vi_calculators/vi_calculators/: __init__.py
value-investment-plugin/vi_core/: README.md  pyproject.toml
value-investment-plugin/vi_core/src/vi_core/: __init__.py  base_provider.py  cli.py  fields.py  plugin.py  spec.py
value-investment-plugin/vi_core/tests/: __init__.py  conftest.py  test_query_with_calculators.py
value-investment-plugin/vi_fields_extension/: pyproject.toml
value-investment-plugin/vi_fields_extension/src/vi_fields_extension/: __init__.py  plugin.py  standard_fields.py
value-investment-plugin/vi_fields_ifrs/: pyproject.toml
value-investment-plugin/vi_fields_ifrs/src/vi_fields_ifrs/: __init__.py  plugin.py
value-investment-plugin/vi_plugin/: pyproject.toml
value-investment-plugin/vi_plugin/src/vi_plugin/: __init__.py  cli.py  extensions.py
value-investment-plugin/vi_plugin/tests/: test_extensions.py  test_vi_plugin.py
value-investment/provider_market_a/: README.md  pyproject.toml
value-investment/provider_market_a/src/provider_market_a/: plugin.py  provider.py
value-investment/provider_market_hk/: README.md  pyproject.toml
value-investment/provider_market_hk/src/provider_market_hk/: __init__.py  plugin.py  provider.py
value-investment/vi_calculators/: README.md  pyproject.toml
value-investment/vi_calculators/tests/: test_calculator_name_collision.py  test_cwd_calculator_loading.py  test_daily_fields_loader.py  test_fcf_skill_e2e.py
value-investment/vi_calculators/vi_calculators/: __init__.py  sandbox.py
value-investment/vi_cli/: pyproject.toml
value-investment/vi_cli/src/vi_cli/: __init__.py  cli.py
value-investment/vi_core/: README.md  pyproject.toml  pyrightconfig.json
value-investment/vi_core/src/vi_core/: base_provider.py  cli.py  evolution.py  items.py  plugin.py  precheck.py  query.py  smart_cache.py  spec.py
value-investment/vi_core/tests/: test_base_provider_years_filtering.py  test_cli_integration.py  test_cli_items.py  test_evolution.py  test_items.py  test_items_migration.py  test_market_specific_field_detection.py  test_precheck.py  test_precheck_evolution.py  test_precheck_format.py  test_query.py  test_query_integration.py  test_query_with_calculators.py  test_vi_provide_items.py
value-investment/vi_fields_ifrs/: README.md  pyproject.toml
value-investment/vi_fields_ifrs/src/vi_fields_ifrs/: __init__.py  plugin.py
(+121 files in other folders)
