[project]
name = "acorn-agent"
version = "0.1.0"
description = "Persistent agent service for acorn-core"
requires-python = ">=3.12"
dependencies = [
    "acorn-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acorn_agent"]

[project.scripts]
acorn-agent = "acorn_agent.cli:main"
