[project]
name = "acorn-cli"
version = "0.1.0"
description = "CLI tool for Acorn plugin management"
requires-python = ">=3.12"
dependencies = [
    "acorn-core>=0.1.0",
    "typer>=0.15.0",
    "questionary>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",
]

[project.scripts]
acorn = "acorn_cli.cli:main"
acorn-agent = "acorn_cli.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acorn_cli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []
