[project]
name = "acorn-core"
version = "0.1.0"
description = "Self-evolving plugin system based on pluggy"
requires-python = ">=3.12"
dependencies = [
    "acorn-events>=0.1.0",
    "pluggy>=1.6.0",
]

[project.entry-points."yapex.acorn.plugins"]
# 内部插件（通过 entry_points 加载）
# 注意：EvoManager 是核心插件，由 Kernel 直接实例化并注册，不通过 entry_points 加载
# 外部插件格式: name = "module:plugin_instance"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acorn_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]  # Error + Fault + Warning
ignore = []

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Darwin"
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv"]
extraPaths = ["../../.venv/lib/python3.12/site-packages"]
venvPath = "../.."
pythonBinaryPath = "../../.venv/bin/python"

[dependency-groups]
dev = ["pytest>=9.0.2"]
