[project]
name = "acorn-events"
version = "0.1.0"
description = "Acorn EventBus - Publish/Subscribe event system"
requires-python = ">=3.12"
dependencies = [
    "blinker>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acorn_events"]

[tool.hatch.build.targets.editable]
packages = ["src/acorn_events"]
