[project]
name = "examples-plugin"
version = "0.1.0"
description = "Example plugin for acorn-core"
requires-python = ">=3.12"

[project.entry-points."yapex.acorn.plugins"]
echo = "examples_plugin.echo:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/examples_plugin"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]  # Error + Fault + Warning
ignore = []
