[project]
name = "financial-downloader"
version = "0.1.0"
description = "Unified financial report downloader for A-share, HK-share, and US-stock"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "scrapling>=0.4.6",
    "curl-cffi>=0.15.0",
    "playwright>=1.58.0",
    "browserforge>=1.2.4",
    "sec-edgar-downloader>=5.1.0",
]

[project.scripts]
fin-down = "financial_downloader.cli:app"

[project.entry-points."acorn.cli.commands"]
financial-downloader = "financial_downloader.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_downloader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "scrapling>=0.4.6",
]
