[project]
name = "html2md"
version = "0.1.0"
description = "SEC HTML to Markdown converter using html-to-markdown"
requires-python = ">=3.12"
dependencies = [
    "html-to-markdown>=3.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "typer>=0.15.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/html2md"]

[tool.hatch.build.targets.editable]
packages = ["src/html2md"]

[project.entry-points."acorn.cli.commands"]
html2md = "html2md.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
