[project]
name = "pdf2txt"
version = "0.1.0"
description = "PDF to TXT converter using Extractous"
requires-python = ">=3.12"
dependencies = [
    "extractous>=0.3.0",
    "typer>=0.15.0",
    "acorn-cli>=0.1.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2txt"]

[tool.hatch.build.targets.editable]
packages = ["src/pdf2txt"]

[project.entry-points."acorn.cli.commands"]
pdf2txt = "pdf2txt.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
