[project]
name = "provider-market-hk"
version = "0.1.0"
description = "Provider Market HK (AKShare) for HK market"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.12.0",
    "vi-core>=0.1.0",
    "vi-fields-extension>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_market_hk"]

[tool.hatch.build.targets.editable]
packages = ["src/provider_market_hk"]

[project.entry-points."value_investment.providers"]
provider_market_hk = "provider_market_hk:plugin"
