[project]
name = "provider-market-us"
version = "0.1.0"
description = "Provider Market US (AKShare) for US stock market"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.12.0",
    "vi-core>=0.1.0",
    "vi-fields-extension>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_market_us"]

[tool.hatch.build.targets.editable]
packages = ["src/provider_market_us"]

[project.entry-points."value_investment.providers"]
provider_market_us = "provider_market_us:plugin"
