[project]
name = "provider-tushare"
version = "0.1.0"
description = "Tushare Provider for Value Investment"
requires-python = ">=3.12"
dependencies = [
    "tushare>=1.4.0",
    "vi-core",  # vi_core dependency
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_tushare"]

[tool.hatch.build.targets.editable]
packages = ["src/provider_tushare"]

[project.entry-points."value_investment.providers"]
tushare = "provider_tushare:provider"
