[project]
name = "vi-core"
version = "0.1.0"
description = "Value Investment Core - Field registry and query engine"
requires-python = ">=3.12"
dependencies = [
    "acorn-events>=0.1.0",
    "pluggy>=1.5.0",
    "pandas>=2.0.0,<3.0",
    "diskcache>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vi_core"]

[tool.hatch.build.targets.editable]
packages = ["src/vi_core"]

[project.entry-points."yapex.acorn.plugins"]
vi_core = "vi_core.plugin:plugin"
