[project]
name = "vi-fields-extension"
version = "0.1.0"
description = "Field Extension Registry for Value Investment"
requires-python = ">=3.12"

dependencies = [
    "pluggy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vi_fields_extension"]

[tool.hatch.build.targets.editable]
packages = ["src/vi_fields_extension"]

[project.entry-points."value_investment.fields"]
extension = "vi_fields_extension.plugin:plugin"
