[project]
name = "vi-fields-ifrs"
version = "0.1.0"
description = "IFRS Standard Fields for Value Investment"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vi_fields_ifrs"]

[tool.hatch.build.targets.editable]
packages = ["src/vi_fields_ifrs"]

[project.entry-points."value_investment.fields"]
ifrs = "vi_fields_ifrs.plugin:plugin"
