[project]
name = "vi-plugin"
version = "0.1.0"
description = "Value Investment Plugin for Acorn"
requires-python = ">=3.12"
dependencies = [
    "acorn-core>=0.1.0",
    "vi-core>=0.1.0",
]

[project.entry-points."yapex.acorn.plugins"]
vi = "vi_plugin:plugin"

[project.entry-points."acorn.cli.commands"]
vi = "vi_plugin.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vi_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []
