[project]
name = "vi-plugin"
version = "0.1.0"
description = "Value Investment Plugin for Acorn (deprecated - use vi-core)"
requires-python = ">=3.12"
dependencies = [
    "acorn-core>=0.1.0",
    "vi-core>=0.1.0",
]

# Deprecated: vi_plugin is now part of vi-core
# Keeping this package for backwards compatibility with direct imports
# but no longer registering as a standalone plugin

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vi_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []
