[project]
name = "provider-market-a"
version = "0.1.0"
description = "Provider Market A (Tushare) for A-Share market"
requires-python = ">=3.12"
dependencies = [
    "tushare>=1.4.0",
    "vi-core>=0.1.0",
    "vi-fields-ifrs>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_market_a"]

[tool.hatch.build.targets.editable]
packages = ["src/provider_market_a"]

[project.entry-points."value_investment.providers"]
provider_market_a = "provider_market_a.plugin:plugin"
