[project]
name = "vi_calculators"
version = "0.1.0"
description = "Calculator Loader Plugin - Auto-load calculators from directories"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vi_calculators"]
force-include = { "../calculators" = "calculators" }

[tool.hatch.build.targets.editable]
packages = ["vi_calculators"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

# Pluggy entry point
[project.entry-points."value_investment.calculators"]
vi_calculators = "vi_calculators:plugin"
