[project]
name = "vi_cli"
version = "0.1.0"
description = "Value Investment CLI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "acorn-cli>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vi_cli"]

[tool.hatch.build.targets.editable]
packages = ["src/vi_cli"]

[project.entry-points."acorn.cli.commands"]
vi = "vi_cli.cli:app"
