[project]
name = "vi_core"
version = "0.1.0"
description = "Value Investment Core - Field registry and query engine"
requires-python = ">=3.12"
dependencies = [
    "acorn-events>=0.1.0",
    "pluggy>=1.5.0",
    "pandas>=2.0.0,<3.0",
    "diskcache>=5.0.0",
    "loguru>=0.7.0",
    "vi_fields_extension>=0.1.0",
    "vi_calculators>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vi_core"]

[tool.hatch.build.targets.editable]
packages = ["src/vi_core"]

# VI as single domain plugin entry point
[project.entry-points."yapex.acorn.plugins"]
vi = "vi_core.plugin:plugin"

# CLI commands via acorn CLI
[project.entry-points."acorn.cli.commands"]
vi = "vi_core.cli:app"
